examples/datalog/11_types/24_very_large_floats.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_large_floats
Knowledge graph 'test_large_floats' created.
Switched to knowledge graph: test_large_floats
> .kg use test_large_floats
Switched to knowledge graph: test_large_floats
> +huge[(1.0e100,), (2.0e100,), (3.0e100,)].
Inserted 3 fact(s) into 'huge'.
> +sum_huge(<SUM:X>) :- huge(X).
Script error: Parse error: Invalid term: '<SUM:X>'
